# ore-pool-private

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs  miner.rs  pool.rs
server/: Cargo.toml
server/src/: aggregator.rs  error.rs  handlers.rs  main.rs  operator.rs
types/src/: lib.rs
